fix/about-styles: Fix broken layout on large screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,6 @@
 @media (min-width: 1349px) {
   .section__about .about__content {
     column-gap: 1rem;
-    grid-template-rows: auto auto;
     overflow: initial;
     width: 1170px;
   }
@@ -169,10 +168,7 @@
 }
 @media (min-width: 1349px) {
   .section__about .about__content-background {
-    background-position: 1rem;
-    padding: 12rem;
-    top: -5rem;
-    width: 100%;
+    left: 0rem;
   }
 }
 .section__about .about__content-title {
@@ -191,8 +187,6 @@
 }
 @media (min-width: 1349px) {
   .section__about .about__content-title {
-    font-size: 4rem;
-    grid-column: 1/8;
     height: 11rem;
     padding: 1rem 0 1rem 1rem;
   }
@@ -207,11 +201,6 @@
 @media (min-width: 992px) {
   .section__about .about__content-text {
     grid-column: 6/spam;
-  }
-}
-@media (min-width: 1349px) {
-  .section__about .about__content-text {
-    grid-column: 8/spam;
   }
 }
 .section__about .about__content-text p {
